--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
                 run: |
                     python -m pip install --upgrade pip
                     python -m pip install --upgrade setuptools wheel
-                    pip install -r requirements.txt
+                    python -m pip install -r requirements.txt
             -   name: Test with unittest
                 run: |
-                    python setup.py test
+                    python -m unittest discover -s tests
