--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
                 run: |
                     python -m pip install --upgrade pip
                     python -m pip install --upgrade setuptools wheel
-                    python -m pip install -r requirements_test.txt
+                    python -m pip install -r requirements.txt
             -   name: Test with unittest
                 run: |
                     python -m unittest discover -s tests
